# uptime-monitor

./: Cargo.toml
migrations/: 20240223221930_init.sql
src/: main.rs
templates/: base.html  index.html  single_website.html  styles.css
